--- a/estilos.css
+++ b/estilos.css
@@ -23,15 +23,11 @@ p {
 
 /* darle altura y ancho en cointainer*/
 .ancho-cv {
-  /*display: flex;
-  height: 100vh;
-  justify-content: center;
-  margin: auto;*/
   display: flex;
   height: 100vh;
   justify-content: center;
   margin: auto;
-  width: 80%;
+  /*width: 80%;*/
 }
 
 .col__left {
