--- a/estilos.css
+++ b/estilos.css
@@ -24,7 +24,7 @@ p {
 /* darle altura y ancho en cointainer*/
 .ancho-cv {
   display: flex;
-  /*height: 100vh;*/
+  height: 90vh;
   justify-content: center;
   margin: auto;
   /*width: 80%;*/
